# infer

infer/src/: dune.in  infer.ml
infer/src/atd/: InferCommand.ml  InferCommand.mli
infer/src/base/: CommandDoc.ml  Config.ml
infer/src/integration/: Driver.ml
infer/src/pta/: dune  processInfer.ml  pta.ml  ptaDomain.ml
